samples/dashboards/demo/election/demo.css
@import url("https://code.highcharts.com/css/highcharts.css");
@import url("https://code.highcharts.com/dashboards/css/datagrid.css");
@import url("https://code.highcharts.com/dashboards/css/dashboards.css");

/* *
 *
 *  Variables
 *
 * */
:root {
    /* Democrat */
    --highcharts-color-0: #4d8adb;
    --highcharts-color-0-light: #d7e3f3;

    /* Republican */
    --highcharts-color-1: #be2f24;
    --highcharts-color-1-light: #f5d3d1;

    /* Others */
    --container-background: var(--highcharts-neutral-color-10);
    --color-background: var(--highcharts-neutral-color-3);
    --color-link: #339;

    /* Components */
    --color-title: #000;
    --component-background: var(--highcharts-neutral-color-0);
    --component-background-optional: var(--highcharts-neutral-color-5);
    --component-rounded-corners: 6px;
    --datagrid-border-color: var(--highcharts-neutral-color-20);

    /* Dimensions for result and control HTML */
    --comp-min-height: 160px;
}

body {
    font-family: Inter, "Helvetica Neue", Helvetica, Arial, sans-serif;
}

#election-map {
    --color-map: #333;
    --color-marker-border: #fff;
    --color-title-text: #000;
    --color-marker-border-active: #336;
    --color-marker-border-hover: #084ee3;
    --color-marker-text: #fff;
    --color-marker-text-border: #000;
    --color-navigation: #f7f7f7;
    --color-navigation-line: #838393;
    --color-navigation-text: #20202b;
    --color-text: #000;
    --color-text-border: #fff;
    --color-tooltip-background: #fff;
    --color-tooltip-text: #336;
}

#election-chart-historical {
    --color-axis: #333;
    --color-axis-labels: #333;
    --color-title: #2f2b38;
    --color-text: #2f2b38;
    --color-tooltip-background: #5352be;
    --color-tooltip-text: #d9d8e8;
}

#election-grid {
    --color-hover-background: #cfccea;
    --color-hover-border: #e7e7ec;
    --color-hover-text: #e7e7ec;
}

@media (prefers-color-scheme: dark) {
    /* dark mode */
    :root {
        /* Others */
        --color-link: #cca;
        --container-background: #2f2e38;
        --color-title: #c8c7d1;

        /* components */
        --component-background: #e3e3e8;
        --component-background-optional: #474554;
        --datagrid-border-color: var(--component-background-optional);
    }

    #container {
        background: var(--container-background);
    }

    #election-grid {
        --color-hover-background: #252052;
    }

    #elections-selector-wrapper select {
        color: #f2f1f4;
        background-color: var(--component-background-optional);
    }

    #html-control-div {
        color: #f2f1f4;
    }
}

/* *
 *
 *  HTML layout
 *
 * */

#container {
    padding: 10px;
    background-color: var(--container-background);
}

.row {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
}

.cell,
.col-wrapper {
    flex: 1;
    min-width: 20px;
}

.col-wrapper {
    display: flex;
    flex-direction: column;
}

.cell > .highcharts-dashboards-component {
    position: relative;
    margin: 10px;
    padding: 10px;
    background-clip: border-box;
}

/* *
 *
 *  Common styles
 *
 * */

.highcharts-dashboards-component-title {
    margin: 0;
    padding: 10px 4px;
    fill: var(--color-title);
    color: var(--color-title);
    font-size: 1.2em;
    font-weight: normal;
    text-align: left;
}

.highcharts-dashboards-component-content,
.highcharts-dashboards-component-highcharts-content {
    background: var(--component-background);
    border-radius: var(--component-rounded-corners);
}

.highcharts-map-series .highcharts-point,
.highcharts-column-series path.highcharts-point,
.highcharts-bar-series path.highcharts-point {
    stroke: #fff;
}

.highcharts-data-label text,
text.highcharts-data-label {
    fill: #000;
}

.dataGrid-container {
    background: none;
}

.democrat {
    color: var(--highcharts-color-0);
    font-weight: bold;
}

.republican {
    color: var(--highcharts-color-1);
    font-weight: bold;
}

/* Storage for application meta data */
#app-data {
    display: none;
}

#demo-description {
    padding: 15px;
}

/* *
 *
 *  HTML for displaying national election result
 *
 * */

#html-result-div {
    --progress-bar-height: 100%;

    text-align: center;
    display: flex;
    flex-direction: row;
    min-height: var(--comp-min-height);
    padding: 5px;
}

#html-result-div div {
    display: flex;
    flex-direction: row;
}

/* Left/Right: Democrat/Republican candidate */
#html-result-div #dem-cand,
#html-result-div #rep-cand {
    flex: 1 0 50px;
    max-width: 100px;
    align-items: center;
    padding: 1%;
}

#html-result-div img {
    /* Candidate portraits */
    width: auto;
    height: auto;
    border-radius: 50%;
}

/* Middle: Election result */
#html-result-div #election-result {
    flex: 1 1 auto;
    flex-direction: column;
}

#html-result-div #election-result div.info {
    flex: 1;
    align-items: center;
    max-height: 60px;
}

#html-result-div #election-result div.info div {
    flex: 1 1 auto;
    align-items: center;
}

/* Result bar */
#bar-container {
    position: relative;
    min-height: calc(var(--comp-min-height) * 0.25);
}

#bar-dem {
    position: absolute;
    left: 0;
    top: 0;
    height: var(--progress-bar-height);
    background-color: var(--highcharts-color-0);
    border-radius: 5px 0 0 5px;
    transition: width 0.5s;
}

#bar-line {
    position: absolute;
    left: 50%;
    top: 0;
    width: 3px;
    background-color: #ccc;
    height: var(--progress-bar-height);
    z-index: 10;
}

#bar-line span#arrow {
    position: absolute;
    top: -20px;
    left: -5px;
}

#bar-rep {
    position: absolute;
    right: 0;
    top: 0;
    height: var(--progress-bar-height);
    background-color: var(--highcharts-color-1);
    border-radius: 0 5px 5px 0;
    transition: width 0.5s;
}

#election-result .info {
    display: flex;
    flex-direction: row;
}

#election-result .info b {
    padding: 1vw;
}
/* ... */

